fix spacing for logo in theme

--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -65,7 +65,7 @@
     -moz-osx-font-smoothing: grayscale;  /* [1] */
     /* Layout */
     float: left;
-    margin-top: -22px;
+    margin-top: @quarter-spacing-unit*-1px;
     margin-right: 2px;
 }
 
